Fix "new Double()" deprecation